clean up some things found by FindBugs